--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Sayohat haqida sayt</title>
+
+  <!-- STYLES -->
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
 
+  <main class="main-content">
+    <!-- <h1>Sayohat haqida sayt -->
+     <div class="global-wrapper">
+
+      <!-- HERO -->
+        <div class="hero">
+          <div class="hero-content">
+            <h1 class="hero-heading" >SAYOHAT HAQIDAGI ENG QIZIQ BLOGLARNI KUZATIB BORING</h1>
+            <a class="hero-link" href="">
+              <span class="hero-link-inner">
+                <span class="hero-link-text">Top bloglar</span>
+              </span>
+            </a>
+          </div>
+        </div>
+
+
+     </div>
+  </main>
 </body>
 </html>
